<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputSearch"
        android:hint="@string/hint_search_recipe"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@+id/checkVegetarian" android:text="@string/filter_veg"/>
        <CheckBox android:id="@+id/checkQuick" android:text="@string/filter_quick"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipesList"
        android:layout_width="match_parent" android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
