<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="16dp">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView android:id="@+id/txtTitle" android:textStyle="bold" android:textSize="22sp"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <TextView android:id="@+id/txtTimeServings"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <TextView android:text="@string/section_ingredients" android:textStyle="bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingTop="8dp"/>

        <TextView android:id="@+id/txtIngredients"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnAddMissingToShopping"
            android:text="@string/btn_add_missing"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />

        <TextView android:text="@string/section_steps" android:textStyle="bold"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingTop="8dp"/>

        <TextView android:id="@+id/txtSteps"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
